<resources>
    <string name="app_name">ChatAround</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_chat_around">ChatAround!</string>
    <string name="sendlocation">http://chataround.com/api/1.0/pinglocationandgetuser</string>
    <string name="local_service_started">Location Service Started!</string>
    <string name="local_service_stopped">Location Service Stopped!</string>
    <string name="local_service_label">Location Service</string>
    <string name="local_service_connected">Location Service connected</string>
    <string name="local_service_disconnected">Location Service disconnected</string>
    <string name="nickname_label">Nick:</string>
    <string name="email_label">Email:</string>
    <string name="mood_label">Mood:</string>
    <string name="password_label">Desired password:</string>
    <string name="chatNotifications">Get notifications:</string>
    <string name="switch_off">Off</string>
    <string name="switch_on">On</string>
    <string name="stayonline">Stay online:</string>
    <string name="save">Save</string>
    <string name="close">Cancel</string>
    <string name="send_message">Send</string>
    <string name="go_back_listbutton">Back to user list</string>
    <string name="loading_list">Loading list of user</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="radio_other">Other</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="progress_register_message">Registering user</string>
    <string name="progress_updatestatus_message">Updating status</string>
    <string name="progress_login_message">Logging user</string>
    <string name="some_error_server">Something went wrong, try again later!</string>
    <string name="leave_app_title">Exit</string>
    <string name="leave_app_message">You´re about to leave ChatAround!</string>
    <string name="leave_app_ok">Yes, take me out!</string>
    <string name="leave_app_ko">Not now!</string>
    <string name="app_offline">Uhmm..Seems you don´t have internet connection..Try it later!</string>
    <string name="status_updated_succesfully">Your mood it´s been updated!</string>
    <string name="finding_users_label">Finding users around you</string>
    
</resources>